--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MetaMask",
-  "short_name": "Metamask",
+  "name": "MobileMask",
+  "short_name": "Mobilemask",
   "version": "3.12.0",
   "manifest_version": 2,
   "author": "https://metamask.io",
